--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     {"type": "composer", "url": "https://repo.magento.com/"}
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
     "paypal/rest-api-sdk-php": "^1.6",
     "magento/module-paypal": "100.0.*|100.1.*|100.2.*"
   },
